cmake_minimum_required(VERSION 3.13)
SET(CMAKE_CXX_STANDARD 17)
PROJECT(Infra)
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -O3")

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(cereal REQUIRED)
find_package(flatbuffers REQUIRED)

INCLUDE_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}/include
        ${OpenCV_INCLUDE_DIRS}
        ${CEREAL_INCLUDE_DIRS}
        ${FLATBUFFERS_INCLUDE_DIRS}
        )

FILE(GLOB CPP_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
#ADD_LIBRARY(${PROJECT_NAME} STATIC ${CPP_FILES})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${CPP_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})

ADD_EXECUTABLE(main ${PROJECT_SOURCE_DIR}/main.cpp)
TARGET_LINK_LIBRARIES(main ${PROJECT_NAME})

